Add adapter and models

--- a/app/src/main/res/layout/form_add_task.xml
+++ b/app/src/main/res/layout/form_add_task.xml
@@ -1,49 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/addtaskdialog"
-    android:orientation="vertical" android:layout_width="fill_parent"
-    android:layout_height="match_parent"
-    android:weightSum="1">
+android:id="@+id/addtaskdialog"
+android:orientation="vertical" android:layout_width="fill_parent"
+android:layout_height="match_parent"
+android:weightSum="1">
 
-    <EditText
-        android:id="@+id/task_tittle"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:inputType="textCapSentences"
-        android:maxLines="1"
-        android:hint="Task Name"/>
+<EditText
+    android:id="@+id/task_tittle"
+    android:layout_width="match_parent"
+    android:layout_height="48dp"
+    android:inputType="textCapSentences"
+    android:maxLines="1"
+    android:hint="Task Name"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="5dp"
-        android:text="Priority" />
+<EditText
+    android:id="@+id/task_description"
+    android:layout_width="match_parent"
+    android:layout_height="150dp"
+    android:inputType="textCapSentences"
+    android:hint="Task Description"/>
 
-    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/task_priority"
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingTop="10dp"
+    android:paddingBottom="5dp"
+    android:text="Priority" />
+
+<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/task_priority"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <RadioButton android:id="@+id/task_priority_urgent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:text="Urgent!"
+        android:buttonTint="#DF0101"/>
 
-        <RadioButton android:id="@+id/task_priority_urgent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Urgent!"
-            android:buttonTint="#DF0101"/>
+    <RadioButton android:id="@+id/task_priority_important_not_urgent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Important but not Urgent"
+        android:buttonTint="#2E2EFE"
+        android:checked="true"/>
 
-        <RadioButton android:id="@+id/task_priority_important_not_urgent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Important but not Urgent"
-            android:buttonTint="#2E2EFE"
-            android:checked="true"/>
+    <RadioButton android:id="@+id/task_priority_not_urgent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Not Urgent"
+        android:buttonTint="#088A08"/>
 
-        <RadioButton android:id="@+id/task_priority_not_urgent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Not Urgent"
-            android:buttonTint="#088A08"/>
-
-    </RadioGroup>
+</RadioGroup>
 </LinearLayout>
